--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "vue": "^3.2.41"
     },
     "dependencies": {
+        "@element-plus/icons-vue": "^2.0.10",
         "element-plus": "^2.2.28",
         "font-awesome": "^4.7.0"
     }
