--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
         "@element-plus/icons-vue": "^2.0.10",
         "element-plus": "^2.2.28",
-        "font-awesome": "^4.7.0"
+        "font-awesome": "^4.7.0",
+        "javascript-time-ago": "^2.5.9"
     }
 }
