--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     },
     "dependencies": {
         "@element-plus/icons-vue": "^2.0.10",
+        "@inertiajs/vue3": "^1.0.2",
         "element-plus": "^2.2.28",
         "font-awesome": "^4.7.0",
-        "javascript-time-ago": "^2.5.9"
+        "javascript-time-ago": "^2.5.9",
+        "vue-router": "^4.1.6"
     }
 }
