--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
         "element-plus": "^2.2.28",
         "font-awesome": "^4.7.0",
         "javascript-time-ago": "^2.5.9",
+        "quill": "^1.3.7",
+        "vue-quill-editor": "^3.0.6",
         "vue-router": "^4.1.6"
     }
 }
